--- a/Views/News/getNews.cshtml
+++ b/Views/News/getNews.cshtml
@@ -4,7 +4,7 @@
 {
     <section class="section section-aside-tinmoidang">
         <ul class="blog-listing clearfix">
-            <article class="article-item clearfix">
+            <li class="article-item clearfix">
                 <a href="/@ViewBag.meta/@i.meta/@i.id">
                     <figure>
                         <img class="lazy_done"
@@ -22,7 +22,7 @@
                         </p>
                     </div>
                 </a>
-            </article>
+            </li>
         </ul>
     </section>
 }
