--- a/Content/css/hoitro-style-config.css
+++ b/Content/css/hoitro-style-config.css
@@ -45,7 +45,6 @@ html {
 body {
     color: #666666;
     font-size: 14px;
-    /* font-family: 'Poppins', sans-serif; */
     font-family: Arial, Helvetica, sans-serif !important;
     line-height: 1.80857;
     font-weight: normal;
@@ -426,8 +425,9 @@ button {
      content: "";
      background-color: #ff0909;
      width: 20px;
-     height: 4px;
+     height: 7px;
      transform: rotate(-36deg);
+     margin-left: -10px;
 }
 
 .titlepage h2::after {
@@ -435,7 +435,7 @@ button {
      content: "";
      background-color: #ff0909;
      width: 20px;
-     height: 4px;
+     height: 7px;
      transform: rotate(-36deg);
      bottom: 10px;
 }
