--- a/Views/HomePage/getNews.cshtml
+++ b/Views/HomePage/getNews.cshtml
@@ -1,46 +1,55 @@
 ﻿@model List<HoiTroWebsite.Models.News>
 
+@* lấy 7 cái thôi trong trang chủ *@
 @foreach (var i in Model)
 {
-    <section class="section section-aside-tinmoidang">
-        <ul class="blog-listing clearfix">
-            <article class="article-item clearfix">
-                <a href="/@ViewBag.meta/@i.meta/@i.id">
-                    <figure>
-                        <img class="lazy_done"
-                             @*src="https://pt123.cdn.static123.com/images/thumbs/450x300/fit/2024/07/11/tien-coc-thue-tro-co-lay-lai-duoc-khong_1720661417.jpg"
-                             data-src="https://pt123.cdn.static123.com/images/thumbs/450x300/fit/2024/07/11/tien-coc-thue-tro-co-lay-lai-duoc-khong_1720661417.jpg"*@
-                             src="@i.imagePath"
-                             data-loaded="true">
-                    </figure>
-                    <div class="article-meta">
-                        <h6 class="article-title">
-                            @i.title
-                        </h6>
-                        <p class="article-summary">
-                            @Html.Raw(i.brief_description.Length > 200 ? i.brief_description.Substring(0, 200) + "..." : i.brief_description)
-                        </p>
-                    </div>
-                </a>
+    <div class="blog-item">
+        <a href="/@ViewBag.meta/@i.meta/@i.id" class="blog-card">
+            <div class="blog-container-img">
+                <div class="blog-thumb" style="background-image: url(@i.imagePath);"></div>
+            </div>
+            <article>
+                <h1>@i.title</h1>
+                <div>
+                    <p class="float-right" style="font-size: 0.9rem; margin-top:5px;">22/10/2024</p>
+                </div>
+                <p>@i.brief_description</p>
+                <span>@i.author</span>
             </article>
-        </ul>
-    </section>
+        </a>
+    </div>
 }
 
+@*
+    template mẫu tin tức trong trang chủ
+    <div class="blog-item">
+        <a href="https://webdesign.tutsplus.com/tutorials/how-to-code-a-scrolling-alien-lander-website--cms-26826" class="blog-card">
+            <div class="thumb" style="background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/210284/landing.png);"></div>
+            <article>
+                <h1>How to Code a Scrolling “Alien Lander” Website</h1>
+                <div>
+                    <p class="float-right" style="font-size: 0.9rem; margin-top:5px;">22/10/2024</p>
+                </div>
+                <p>We’ll be putting things together so that as you scroll down from the top of the page you’ll see an “Alien Lander” making its way to touch down.</p>
+                <span>Kezz Bracey</span>
+            </article>
+        </a>
+    </div>
+*@
 
-
-
-@*<div class="col-md-4">
-    <div class="blog_box">
-        <div class="blog_img">
-            <figure><img src="@i.imagePath" alt="@i.title" /></figure>
-        </div>
-        <div class="blog_room" style="font-family:'Times New Roman';">
-            <a href="/@ViewBag.meta/@i.meta/@i.id">@i.title</a>
-            <span>Tác giả: @i.author </span>
-            <p style="font-style:italic">
-                @Html.Raw(i.brief_description.Length > 200 ? i.brief_description.Substring(0, 200) + "..." : i.brief_description)
-            </p>
+@*
+    <div class="col-md-4">
+        <div class="blog_box">
+            <div class="blog_img">
+                <figure><img src="@i.imagePath" alt="@i.title" /></figure>
+            </div>
+            <div class="blog_room" style="font-family:'Times New Roman';">
+                <a href="/@ViewBag.meta/@i.meta/@i.id">@i.title</a>
+                <span>Tác giả: @i.author </span>
+                <p style="font-style:italic">
+                    @Html.Raw(i.brief_description.Length > 200 ? i.brief_description.Substring(0, 200) + "..." : i.brief_description)
+                </p>
+            </div>
         </div>
     </div>
-</div>*@
+*@
