--- a/Views/News/NewsDetail.cshtml
+++ b/Views/News/NewsDetail.cshtml
@@ -1,36 +1,60 @@
 ﻿@model HoiTroWebsite.Models.News
 
 @{
-    ViewBag.Title = "NewsDetail";
+    ViewBag.Title = Model.title;
     Layout = "~/Views/Shared/_MyLayout.cshtml";
 }
 
-@Styles.Render("~/Content/css")
-@Scripts.Render("~/Scripts/js")
+@*@Styles.Render("~/Content/css")
+    @Scripts.Render("~/Scripts/js")*@
 
+<div class="container">
+    <div class="row">
 
-<div id="left-col">
-    <article class="the-article">
-        <header class="page-header">
-            <h1 class="page-h1">@Model.title</h1>
-        </header>
-        <div class="article-summary">
-            <p>@Model.brief_description</p>
+        <div class="col-8 pr-2">
+            <div class="left-content">
+
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb pb-0">
+                        <li class="breadcrumb-item"><a href="/trang-chu">Trang chủ</a></li>
+                        <li class="breadcrumb-item"><a href="/tin-tuc">Trang chủ</a></li>
+                        <li class="breadcrumb-item active" aria-current="page"><a href="/tin-tuc/@ViewBag.metaNewsType" style="color: inherit;">@ViewBag.titleNewsType</a></li>
+                    </ol>
+                </nav>
+
+                <article class="the-article">
+                    <header class="page-header">
+                        <h1 class="page-h1">@Model.title</h1>
+                    </header>
+                    <div class="article-summary">
+                        <p>@Model.brief_description</p>
+                    </div>
+                    <div class="article-main-content">
+                        <figure style="text-align: center;">
+                            <img src="@Model.imagePath" alt="@Model.title" width="960" height="720">
+                            <figcaption>
+                                <em>@Model.title</em>
+                            </figcaption>
+                        </figure>
+                        <div>@Html.Raw(Model.detail_description)</div>
+                    </div>
+                    <div class="article-tags">
+                        <span>Từ khóa:@Model.NewsType.title</span>
+                    </div>
+                    <span>Tác giả:@Model.author</span>
+                </article>
+            </div>
         </div>
-        <div class="article-main-content">
-            <figure style="text-align: center;">
-                <img src="@Model.imagePath" alt="@Model.title" width="960" height="720">
-                <figcaption>
-                    <em>@Model.title</em>
-                </figcaption>
-            </figure>
-            <div>@Html.Raw(Model.detail_description)</div>
+
+        <div class="col-4 pl-2">
+            <div class="right-content">
+
+                @{ 
+                    Html.RenderAction("GetLatestRoomList", "MainPartial");
+                    Html.RenderAction("GetMiniNews", "MainPartial");
+                }
+
+            </div>
         </div>
-        <div class="article-tags">
-            <span>Từ khóa:@Model.NewsType.title</span>
-        </div>
-        <span>Tác giả:@Model.author</span>
-</div>
-        </div>
-    </article>
+    </div>
 </div>
