--- a/Views/Shared/_MyLayout.cshtml
+++ b/Views/Shared/_MyLayout.cshtml
@@ -13,19 +13,21 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- bootstrap css -->
-    <link rel="stylesheet" href="~/Content/css/bootstrap.min.css">
+    <link rel="stylesheet" href="~/Content/css/bootstrap.min.css" />
     <!-- style css -->
-    <link rel="stylesheet" href="~/Content/css/hoitro-style-config.css">
+    <link rel="stylesheet" href="~/Content/css/hoitro-style-config.css" />
     <link rel="stylesheet" href="~/Content/css/hoitro-style.css">
     @*<link rel="stylesheet" href="~/Content/css/style_room.css">*@
-    <link rel="stylesheet" href="~/Content/css/style_dangtin.css">
-    <link rel="stylesheet" href="~/Content/css/style_signinsignout.css">
+    @*<link rel="stylesheet" href="~/Content/css/style_dangtin.css">*@
+    <link rel="stylesheet" href="~/Content/css/style_signinsignout.css" />
     <!-- Responsive-->
-    <link rel="stylesheet" href="~/Content/css/responsive.css">
+    <link rel="stylesheet" href="~/Content/css/responsive.css" />
     <!-- fevicon -->
     <link rel="icon" href="~/Content/images/fevicon.png" type="image/gif" />
     <!-- Scrollbar Custom CSS -->
-    <link rel="stylesheet" href="~/Content/css/jquery.mCustomScrollbar.min.css">
+    <link rel="stylesheet" href="~/Content/css/jquery.mCustomScrollbar.min.css" />
+    <!-- font-awesome -->
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 </head>
 <!-- body -->
 <body class="main-layout">
@@ -35,19 +37,18 @@
             <div class="loader"><img src="~/Content/images/loading.gif" alt="#" /></div>
         </div>*@
     <!-- end loader -->
-
     <!-- logo và đăng ký, đăng nhập -->
-    <div class="container header">
-        <div class="logo_section" style="float: left">
+    <div class="header">
+        <div class="logo_section ml-5" style="float: left">
             <div class="full">
                 <div class="center-desk">
                     <div class="logo">
-                        <a href="index.html"><img src="~/Content/images/logo.png" alt="#" /></a>
+                        <a href="index.html"><img src="~/Content/images/hoitro-logo.svg" alt="Logo" /></a>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="user-welcome clearfix js-reload-html-header" style="float: right">
+        <div class="user-welcome clearfix js-reload-html-header mr-5" style="float: right">
             <a rel="nofollow" class="btn" href="javascript:void(0)"><i class="icon heart size-18"></i> Yêu thích <span class="number-count js-save-post-total hidden" style="display: none;">1</span></a>
             <a rel="nofollow" class="btn" href="dang-nhap"><i class="icon register"></i> Đăng nhập</a>
             <a rel="nofollow" class="btn" href="dang-ky"><i class="icon login"></i> Đăng ký</a>
@@ -55,7 +56,6 @@
         </div>
     </div>
     <!-- end logo và đăng ký, đăng nhập -->
-
     <!-- phần navigation bar -->
     <div id="menu-bar">
         @{ Html.RenderAction("GetMenuBar", "MainPartial"); }
@@ -66,21 +66,114 @@
         @RenderBody();
     </div>
 
+    <!-- phần hỗ trợ -->
+    <div class="section-support">
+        <div class="container">
+            <div class="titlepage">
+                <h2>Hỗ Trợ</h2>
+            </div>
+            <div class="row justify-content-center mb-3">
+                <div class="col-12 col-sm-8 col-lg-6">
+                    <!-- Section Heading-->
+                    <div class="section_heading text-center wow fadeInUp" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+                        <p>Hãy liện hệ cho chúng tôi nếu bạn cần hỗ trợ</p>
+                        <div class="line"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <!-- Single Advisor-->
+                <div class="col-12 col-sm-6 col-lg-3">
+                    <div class="single_advisor_profile wow fadeInUp" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+                        <!-- Team Thumb-->
+                        <div class="advisor_thumb">
+                            <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="">
+                            <!-- Social Info-->
+                            <div class="social-info">
+                                <a href="#"><i class="fa fa-facebook"></i></a>
+                                <a href="#"><i class="fa fa-envelope"></i></a>
+                                <a href="#"><i class="fa" style="position: relative; bottom: -3px;"><svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 50 50" width="16px" height="16px"><path d="M 9 4 C 6.2504839 4 4 6.2504839 4 9 L 4 41 C 4 43.749516 6.2504839 46 9 46 L 41 46 C 43.749516 46 46 43.749516 46 41 L 46 9 C 46 6.2504839 43.749516 4 41 4 L 9 4 z M 9 6 L 15.580078 6 C 12.00899 9.7156859 10 14.518083 10 19.5 C 10 24.66 12.110156 29.599844 15.910156 33.339844 C 16.030156 33.549844 16.129922 34.579531 15.669922 35.769531 C 15.379922 36.519531 14.799687 37.499141 13.679688 37.869141 C 13.249688 38.009141 12.97 38.430859 13 38.880859 C 13.03 39.330859 13.360781 39.710781 13.800781 39.800781 C 16.670781 40.370781 18.529297 39.510078 20.029297 38.830078 C 21.379297 38.210078 22.270625 37.789609 23.640625 38.349609 C 26.440625 39.439609 29.42 40 32.5 40 C 36.593685 40 40.531459 39.000731 44 37.113281 L 44 41 C 44 42.668484 42.668484 44 41 44 L 9 44 C 7.3315161 44 6 42.668484 6 41 L 6 9 C 6 7.3315161 7.3315161 6 9 6 z M 33 15 C 33.55 15 34 15.45 34 16 L 34 25 C 34 25.55 33.55 26 33 26 C 32.45 26 32 25.55 32 25 L 32 16 C 32 15.45 32.45 15 33 15 z M 18 16 L 23 16 C 23.36 16 23.700859 16.199531 23.880859 16.519531 C 24.050859 16.829531 24.039609 17.219297 23.849609 17.529297 L 19.800781 24 L 23 24 C 23.55 24 24 24.45 24 25 C 24 25.55 23.55 26 23 26 L 18 26 C 17.64 26 17.299141 25.800469 17.119141 25.480469 C 16.949141 25.170469 16.960391 24.780703 17.150391 24.470703 L 21.199219 18 L 18 18 C 17.45 18 17 17.55 17 17 C 17 16.45 17.45 16 18 16 z M 27.5 19 C 28.11 19 28.679453 19.169219 29.189453 19.449219 C 29.369453 19.189219 29.65 19 30 19 C 30.55 19 31 19.45 31 20 L 31 25 C 31 25.55 30.55 26 30 26 C 29.65 26 29.369453 25.810781 29.189453 25.550781 C 28.679453 25.830781 28.11 26 27.5 26 C 25.57 26 24 24.43 24 22.5 C 24 20.57 25.57 19 27.5 19 z M 38.5 19 C 40.43 19 42 20.57 42 22.5 C 42 24.43 40.43 26 38.5 26 C 36.57 26 35 24.43 35 22.5 C 35 20.57 36.57 19 38.5 19 z M 27.5 21 C 27.39625 21 27.29502 21.011309 27.197266 21.03125 C 27.001758 21.071133 26.819727 21.148164 26.660156 21.255859 C 26.500586 21.363555 26.363555 21.500586 26.255859 21.660156 C 26.148164 21.819727 26.071133 22.001758 26.03125 22.197266 C 26.011309 22.29502 26 22.39625 26 22.5 C 26 22.60375 26.011309 22.70498 26.03125 22.802734 C 26.051191 22.900488 26.079297 22.994219 26.117188 23.083984 C 26.155078 23.17375 26.202012 23.260059 26.255859 23.339844 C 26.309707 23.419629 26.371641 23.492734 26.439453 23.560547 C 26.507266 23.628359 26.580371 23.690293 26.660156 23.744141 C 26.819727 23.851836 27.001758 23.928867 27.197266 23.96875 C 27.29502 23.988691 27.39625 24 27.5 24 C 27.60375 24 27.70498 23.988691 27.802734 23.96875 C 28.487012 23.82916 29 23.22625 29 22.5 C 29 21.67 28.33 21 27.5 21 z M 38.5 21 C 38.39625 21 38.29502 21.011309 38.197266 21.03125 C 38.099512 21.051191 38.005781 21.079297 37.916016 21.117188 C 37.82625 21.155078 37.739941 21.202012 37.660156 21.255859 C 37.580371 21.309707 37.507266 21.371641 37.439453 21.439453 C 37.303828 21.575078 37.192969 21.736484 37.117188 21.916016 C 37.079297 22.005781 37.051191 22.099512 37.03125 22.197266 C 37.011309 22.29502 37 22.39625 37 22.5 C 37 22.60375 37.011309 22.70498 37.03125 22.802734 C 37.051191 22.900488 37.079297 22.994219 37.117188 23.083984 C 37.155078 23.17375 37.202012 23.260059 37.255859 23.339844 C 37.309707 23.419629 37.371641 23.492734 37.439453 23.560547 C 37.507266 23.628359 37.580371 23.690293 37.660156 23.744141 C 37.739941 23.797988 37.82625 23.844922 37.916016 23.882812 C 38.005781 23.920703 38.099512 23.948809 38.197266 23.96875 C 38.29502 23.988691 38.39625 24 38.5 24 C 38.60375 24 38.70498 23.988691 38.802734 23.96875 C 39.487012 23.82916 40 23.22625 40 22.5 C 40 21.67 39.33 21 38.5 21 z" /></svg></i></a>
+                            </div>
+                        </div>
+                        <!-- Team Details-->
+                        <div class="single_advisor_details_info">
+                            <h6>Võ Văn Sáng</h6>
+                            <p class="support-task">Phản ánh, khiếu nại, hỗ trợ đăng tin</p>
+                            <p>
+                                <i class="fa fa-phone"></i>  0369566322
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Single Advisor-->
+                <div class="col-12 col-sm-6 col-lg-3">
+                    <div class="single_advisor_profile wow fadeInUp" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
+                        <!-- Team Thumb-->
+                        <div class="advisor_thumb">
+                            <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="">
+                            <!-- Social Info-->
+                            <div class="social-info"><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-linkedin"></i></a></div>
+                        </div>
+                        <!-- Team Details-->
+                        <div class="single_advisor_details_info">
+                            <h6>Nazrul Islam</h6>
+                            <p class="support-task">UI Designer</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Single Advisor-->
+                <div class="col-12 col-sm-6 col-lg-3">
+                    <div class="single_advisor_profile wow fadeInUp" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
+                        <!-- Team Thumb-->
+                        <div class="advisor_thumb">
+                            <img src="https://bootdey.com/img/Content/avatar/avatar6.png" alt="">
+                            <!-- Social Info-->
+                            <div class="social-info"><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-linkedin"></i></a></div>
+                        </div>
+                        <!-- Team Details-->
+                        <div class="single_advisor_details_info">
+                            <h6>Riyadh Khan</h6>
+                            <p class="support-task">Developer</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Single Advisor-->
+                <div class="col-12 col-sm-6 col-lg-3">
+                    <div class="single_advisor_profile wow fadeInUp" data-wow-delay="0.5s" style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInUp;">
+                        <!-- Team Thumb-->
+                        <div class="advisor_thumb">
+                            <img src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="">
+                            <!-- Social Info-->
+                            <div class="social-info"><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-linkedin"></i></a></div>
+                        </div>
+                        <!-- Team Details-->
+                        <div class="single_advisor_details_info">
+                            <h6>Niloy Islam</h6>
+                            <p class="support-task">Marketing Manager</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- kết thúc phần hỗ trợ -->
+
     <footer>
         <div class="footer">
             <div class="container">
-                <div class="row">
-                    <div class=" col-md-4">
-                        <h3>Contact US</h3>
-                        <ul class="conta">
-                            <li><i class="fa fa-map-marker" aria-hidden="true"></i> Address</li>
-                            <li><i class="fa fa-mobile" aria-hidden="true"></i> +01 1234569540</li>
-                            <li> <i class="fa fa-envelope" aria-hidden="true"></i><a href="#"> demo@gmail.com</a></li>
+                <div class="row justify-content-center">
+                    <div class="col-lg-3 col-md-4 col-sm-12 mb-4">
+                        <h3>Về chúng tôi</h3>
+                        <ul class="footer-menu-list">
+                            <li><a href="#">Giới thiệu về Hỏi Trọ</a></li>
+                            <li><a href="#">Chính sách bảo mật</a></li>
+                            <li><a href="#">Chính sách thanh toán</a></li>
+                            <li><a href="#">Quy chế hoạt động</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-4">
-                        <h3>Menu Link</h3>
-                        <ul class="link_menu">
+                    <div class="col-lg-3 col-md-4 col-sm-12 mb-4">
+                        <h3>Menu link</h3>
+                        <ul class="footer-menu-list">
                             <li class="active"><a href="#">Home</a></li>
                             <li><a href="about.html"> about</a></li>
                             <li><a href="room.html">Our Room</a></li>
@@ -89,12 +182,17 @@
                             <li><a href="contact.html">Contact Us</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-4">
-                        <h3>News letter</h3>
-                        <form class="bottom_form">
-                            <input class="enter" placeholder="Enter your email" type="text" name="Enter your email">
-                            <button class="sub_btn">subscribe</button>
-                        </form>
+                    <div class="col-lg-3 col-md-4 col-sm-12 mb-4">
+                        <h3>Về khách hàng</h3>
+                        <ul class="footer-menu-list">
+                            <li><a href="#">Giới thiệu về Hỏi Trọ</a></li>
+                            <li><a href="#">Chính sách bảo mật</a></li>
+                            <li><a href="#">Chính sách thanh toán</a></li>
+                            <li><a href="#">Quy chế hoạt động</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-3 col-md-4 col-sm-12 mb-4">
+                        <h3>Kết nối với HoiTro</h3>
                         <ul class="social_icon">
                             <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
@@ -108,20 +206,25 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-10 offset-md-1">
-
                             <p>
-                                © 2019 All Rights Reserved. Design by <a href="https://html.design/"> Free Html Templates</a>
-                                <br><br>
-                                Distributed by <a href="https://themewagon.com/" target="_blank">ThemeWagon</a>
+                                Copyright © 2024 - 2025 Ton Duc Thang Student project
                             </p>
-
                         </div>
                     </div>
                 </div>
+                <ul class="footer-company-info">
+                    <li>
+                        <p><span>Địa chỉ:</span> bla bla bla</p>
+                    </li>
+                    <li>
+                        <p><span>Email:</span> bla bla bla</p>
+                    </li>
+                </ul>
             </div>
         </div>
     </footer>
     <!-- end footer -->
+
     <!-- Javascript files-->
     <script src="~/Scripts/js/jquery.min.js"></script>
     <script src="~/Scripts/js/bootstrap.bundle.min.js"></script>
