--- a/Views/RoomInfo/RoomDetail.cshtml
+++ b/Views/RoomInfo/RoomDetail.cshtml
@@ -9,6 +9,8 @@
 @Scripts.Render("~/Scripts/js")
 
  @*style="transform: translate3d(-5824px, 0px, 0px); transition-duration: 0ms;"*@
+<div><a href="/quan-ly-thong-tin-tai-khoan/@Model.Account.id">QLTK</a></div>
+
 <div class="container">
     @*nháp*@
     <div class="post-images">
