--- a/Views/Shared/_MyLayout.cshtml
+++ b/Views/Shared/_MyLayout.cshtml
@@ -17,6 +17,7 @@
     <!-- style css -->
     <link rel="stylesheet" href="~/Content/css/hoitro-style-config.css" />
     <link rel="stylesheet" href="~/Content/css/hoitro-style.css">
+    <link rel="stylesheet" href="~/Content/css/style_manaAcc.css">
     @*<link rel="stylesheet" href="~/Content/css/style_room.css">*@
     @*<link rel="stylesheet" href="~/Content/css/style_dangtin.css">*@
     <link rel="stylesheet" href="~/Content/css/style_signinsignout.css" />
@@ -50,8 +51,10 @@
         </div>
         <div class="user-welcome clearfix js-reload-html-header mr-5" style="float: right">
             <a rel="nofollow" class="btn" href="javascript:void(0)"><i class="icon heart size-18"></i> Yêu thích <span class="number-count js-save-post-total hidden" style="display: none;">1</span></a>
-            <a rel="nofollow" class="btn" href="dang-nhap"><i class="icon register"></i> Đăng nhập</a>
-            <a rel="nofollow" class="btn" href="dang-ky"><i class="icon login"></i> Đăng ký</a>
+            <a rel="nofollow" class="btn" href="/dang-nhap"><i class="icon register"></i> Đăng nhập</a>
+            <a rel="nofollow" class="btn" href="/dang-ky"><i class="icon login"></i> Đăng ký</a>
+            <a rel="nofollow" class="btn" href="/quan-ly-tin-dang/1"><i class="icon login"></i>Tài khoản người dùng</a>
+            <!-- chưa xử lí đăng nhập nên để id account mặc định là 1 -->
             <a rel="nofollow" class="btn btn-add-post" href="dang-tin-moi"><i></i>Đăng tin miễn phí</a>
         </div>
     </div>
