--- a/Views/Contact/getContact.cshtml
+++ b/Views/Contact/getContact.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "getContact";
+    ViewBag.Title = "Liên hệ";
     Layout = "~/Views/Shared/_MyLayout.cshtml";
 }
 <div class="contact">
