--- a/Views/RoomInfo/getRoomType.cshtml
+++ b/Views/RoomInfo/getRoomType.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<HoiTroWebsite.Models.RoomType>
 
 @{
-    ViewBag.Title = "getRoomType";
+    ViewBag.Title = "Phòng trọ";
     Layout = "~/Views/Shared/_MyLayout.cshtml";
 }
 
